--- a/Portfolio.ipynb
+++ b/Portfolio.ipynb
@@ -29,6 +29,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 375,
+   "id": "2798dc65-3bdd-45ac-bbad-1f36592d8329",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BPS = pd.read_excel('./newdata/BPS.xlsx')\n",
+    "closingprice = pd.read_excel('./newdata/closingprice.xlsx') \n",
+    "closingpricemax20d = pd.read_excel('./newdata/closingpriceamax20d.xlsx') \n",
+    "closingpriceavg20d = pd.read_excel('./newdata/closingpriceavg20d.xlsx') \n",
+    "closingpricemin20d = pd.read_excel('./newdata/closingpricemin20d.xlsx') \n",
+    "closingpricemax52w = pd.read_excel('./newdata/closingpricemax52w.xlsx') \n",
+    "closingpriceavg52w = pd.read_excel('./newdata/closingpriceavg52w.xlsx') \n",
+    "closingpricemin52w = pd.read_excel('./newdata/closingpricemin52w.xlsx')\n",
+    "closingpricemax5d = pd.read_excel('./newdata/closingpricemax5d.xlsx') \n",
+    "closingpriceavg5d = pd.read_excel('./newdata/closingpriceavg5d.xlsx') \n",
+    "closingpricemin5d = pd.read_excel('./newdata/closingpricemin5d.xlsx')\n",
+    "EPS = pd.read_excel('./newdata/EPS.xlsx')\n",
+    "MA1M = pd.read_excel('./newdata/MA1M.xlsx')\n",
+    "MA3M = pd.read_excel('./newdata/MA3M.xlsx')\n",
+    "MA6M = pd.read_excel('./newdata/MA6M.xlsx')\n",
+    "MAweek = pd.read_excel('./newdata/MAweek.xlsx')\n",
+    "MAyear = pd.read_excel('./newdata/MAyear.xlsx')\n",
+    "ROA = pd.read_excel('./newdata/roa.xlsx')\n",
+    "ROE = pd.read_excel('./newdata/roe.xlsx')\n",
+    "SPS = pd.read_excel('./newdata/SPS.xlsx')\n",
+    "tradingvolavg5d = pd.read_excel('./newdata/tradingvolavg5d.xlsx')\n",
+    "vol120d = pd.read_excel('./newdata/volatility120d.xlsx')\n",
+    "vol20d = pd.read_excel('./newdata/volatility20d.xlsx')\n",
+    "vol52w = pd.read_excel('./newdata/volatility52w.xlsx')\n",
+    "vol60d = pd.read_excel('./newdata/volatility60d.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "8331117d-8b53-47c3-b8ce-5d06c47ddd4d",
    "metadata": {},
@@ -4017,7 +4051,6 @@
     "z=[]\n",
     "f=[]\n",
     "\n",
-    "\n",
     "start_date = '2020-01-31'\n",
     "end_date = '2022-07-31'\n",
     "dates = pd.date_range(start_date, end_date, freq='M')\n",
@@ -4087,9 +4120,7 @@
     "    precision.append(precision_score(y_test, y_pred))\n",
     "    recall.append(recall_score(y_test, y_pred))\n",
     "    f1.append(f1_score(y_test, y_pred))\n",
-    "    investable[col] = y_pred\n",
-    "    \n",
-    " "
+    "    investable[col] = y_pred\n"
    ]
   },
   {
@@ -4111,6 +4142,27 @@
    ],
    "source": [
     "sum(b)/len(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 376,
+   "id": "19588e35-9f78-420d-ae40-5832f472f86a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "318"
+      ]
+     },
+     "execution_count": 376,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(b)"
    ]
   },
   {
